Set up some development dependencies
Such as nodemon, eslint (with airbnb code style) and prettier

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for SCTI 2020 web application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/server.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,14 @@
   "homepage": "https://github.com/guilhermeomt/scti2020-server#readme",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.4.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.0.5"
   }
 }
