--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,13 @@
   "rules": {
     "prettier/prettier": "error",
     "no-console": "warn",
-    "no-unused-vars": ["warn", { "vars": "all", "args": "after-used" }]
+    "no-unused-vars": [
+      "warn",
+      {
+        "vars": "all",
+        "args": "after-used",
+        "argsIgnorePattern": "req|res|next|val"
+      }
+    ]
   }
 }
