--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.22"
+    "mongoose": "^5.9.22",
+    "validator": "^13.1.1"
   },
   "devDependencies": {
     "eslint": "^7.4.0",
