Add bcryptjs and update User for password encryption
Also change User email validation to async function instead of a promise
and update eslint configuration file

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
   "rules": {
     "prettier/prettier": "error",
     "no-console": "warn",
+    "func-names": "off",
     "no-unused-vars": [
       "warn",
       {
