Add jsonwebtoken and implement signup and login routes
Also add a password verification method for User schema and update eslint and development dotenv configuration files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,8 @@
     "prettier/prettier": "error",
     "no-console": "warn",
     "func-names": "off",
+    "class-methods-use-this": "off",
+    "no-underscore-dangle": "off",
     "no-unused-vars": [
       "warn",
       {
