--- a/config.dev.env
+++ b/config.dev.env
@@ -1,3 +1,6 @@
 NODE_ENV=development
 PORT=3333
 MONGO_URI=mongodb://localhost:27017/scti2020
+
+JWT_SECRET=my-incredible-development-placeholder-jwt-secret
+JWT_EXPIRES_IN=7d
