Add nodemailer and a handler to send emails
Also update gitignore and set server dotenv to a private one

--- a/config.dev.env
+++ b/config.dev.env
@@ -4,3 +4,8 @@ MONGO_URI=mongodb://localhost:27017/scti2020
 
 JWT_SECRET=my-incredible-development-placeholder-jwt-secret
 JWT_EXPIRES_IN=7d
+
+MAILER_HOST=YOUR_HOST_HERE
+MAILER_PORT=YOUR_PORT_HERE
+MAILER_USERNAME=YOUR_USERNAME_HERE
+MAILER_PASSWORD=YOUR_PASSWORD_HERE
