--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.22",
+    "mongoose-beautiful-unique-validation": "^7.1.1",
     "nodemailer": "^6.4.10",
     "validator": "^13.1.1"
   },
