--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.22",
     "mongoose-beautiful-unique-validation": "^7.1.1",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.4.10",
     "validator": "^13.1.1",
+    "winston": "^3.3.3",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
