--- a/config.dev.env
+++ b/config.dev.env
@@ -4,6 +4,7 @@ MONGO_URI=mongodb://localhost:27017/scti2020
 
 JWT_SECRET=my-incredible-development-placeholder-jwt-secret
 JWT_EXPIRES_IN=7d
+JWT_COOKIE_EXPIRES_IN=7
 
 MAILER_HOST=YOUR_HOST_HERE
 MAILER_PORT=YOUR_PORT_HERE
