Add three endpoints for Event
Two routes that manage event enrollments and another to anyone get events info. Also some update on Event model and controller and on eslint configuration file.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
     "func-names": "off",
     "class-methods-use-this": "off",
     "no-underscore-dangle": "off",
+    "no-param-reassign": "off",
     "no-unused-vars": [
       "warn",
       {
