Implement a database seeder, update models and package.json
Into package.json add seed-related scripts and swap mongoose-beautiful-unique-validation plugin to mongoose-unique-validator. Also little fix and update on gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -106,5 +106,8 @@ dist
 # VSCode configuration
 .vscode/
 
-#dotenv development configuration private file
+# Dotenv private development configuration file
 config.private_dev.env 
+
+# Seed data directory
+data/
